# ADHD

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1fadb261a460_create_db_structure.py  8bd20515a084_add_models.py  d6721d5281f6_add_models.py
src/errors/: api_errors.py
src/models/: __init__.py  doctor.py  group.py  group_age.py  moderator.py  mood.py  patient.py  patient_mood_logs.py  role.py  user.py
src/utils/: constants.py  helpers.py
